--- a/teoricas/teorica_09/slides.tex
+++ b/teoricas/teorica_09/slides.tex
@@ -19,7 +19,7 @@
 \renewcommand*{\bibfont}{\footnotesize} % change bibliograhy size
 \bibliography{../../common/bibliography.bib}
 
-\title{Planeamiento de Caminos}
+\title{Motion Planning}
 \author{}
 \institute{Universidad Nacional de Rosario}
 %\date{\scriptsize{Julio 1, 2021}}
