--- a/teoricas/teorica_06/slides.tex
+++ b/teoricas/teorica_06/slides.tex
@@ -19,11 +19,13 @@
 \renewcommand*{\bibfont}{\footnotesize} % change bibliograhy size
 \bibliography{../../common/bibliography.bib}
 
-\title{Localización}
-\author{}
-\institute{Universidad Nacional de Rosario}
-%\date{\scriptsize{Julio 1, 2021}}
+\subtitle{Localización}
+\title{Robótica Móvil}
+\author{Taihú Pire}
+\institute{}
+\titlegraphic{\includegraphics[width=0.4\textwidth]{images/cifasis_logo.pdf}}
 \date{}
+
 
 \begin{document}
 	
