--- a/teoricas/teorica_09/slides.tex
+++ b/teoricas/teorica_09/slides.tex
@@ -19,10 +19,11 @@
 \renewcommand*{\bibfont}{\footnotesize} % change bibliograhy size
 \bibliography{../../common/bibliography.bib}
 
-\title{Motion Planning}
-\author{}
-\institute{Universidad Nacional de Rosario}
-%\date{\scriptsize{Julio 1, 2021}}
+\subtitle{Motion Planning}
+\title{Robótica Móvil}
+\author{Taihú Pire}
+\institute{}
+\titlegraphic{\includegraphics[width=0.4\textwidth]{images/cifasis_logo.pdf}}
 \date{}
 
 \begin{document}
