--- a/teoricas/teorica_10/slides.tex
+++ b/teoricas/teorica_10/slides.tex
@@ -19,10 +19,11 @@
 \renewcommand*{\bibfont}{\footnotesize} % change bibliograhy size
 \bibliography{../../common/bibliography.bib}
 
-\title{Localización}
-\author{}
-\institute{Universidad Nacional de Rosario}
-%\date{\scriptsize{Julio 1, 2021}}
+\subtitle{Control}
+\title{Robótica Móvil}
+\author{Taihú Pire}
+\institute{Laboratorio de Robótica}
+\titlegraphic{\includegraphics[width=0.4\textwidth]{images/cifasis_logo.pdf}}
 \date{}
 
 \begin{document}
@@ -30,8 +31,8 @@
 	% add title page
 	\frame{\titlepage}
 	
-	\section{Lopcalización}
-	\input{src/localization.tex}
+	\section{Control}
+	\input{src/control.tex}
 	
 	\section{Bibliografía}
 	\input{src/bibliography.tex}
