--- a/teoricas/teorica_09/slides.tex
+++ b/teoricas/teorica_09/slides.tex
@@ -22,7 +22,7 @@
 \subtitle{Motion Planning}
 \title{Robótica Móvil}
 \author{Taihú Pire}
-\institute{}
+\institute{Laboratorio de Robótica}
 \titlegraphic{\includegraphics[width=0.4\textwidth]{images/cifasis_logo.pdf}}
 \date{}
 
