Slides 01: Add definitions

--- a/teoricas/teorica_01/src/mobile_robotics_introduction.tex
+++ b/teoricas/teorica_01/src/mobile_robotics_introduction.tex
@@ -31,7 +31,19 @@
 
 \begin{frame}
 	\frametitle{¿Qué es la Robótica?}
-	La robótica es la intersección de la ciencia, la ingeniería y la tecnología que produce máquinas, llamadas robots, que sustituyen (o replican) las acciones humanas.
+	
+	\begin{block}{Robótica}
+	La Robótica es la intersección de la ciencia, la ingeniería y la tecnología que produce máquinas, llamadas robots, que sustituyen (o replican) las acciones humanas.
+	\end{block}
+	
+	\begin{block}{Mecatrónica}
+	La Mecatrónica tiene como objetivo el diseño y desarrollo de sistemas inteligentes y automatizados que puedan interactuar con el entorno y adaptarse a diferentes situaciones. Los sistemas mecatrónicos pueden incluir robots, pero también abarcan una amplia gama de productos y sistemas que no necesariamente son robots (como electrodomésticos, dispositivos médicos, etc).
+	\end{block}
+	
+	\begin{block}{La Domótica}
+	La domótica se refiere a la automatización y control inteligente de los sistemas y aparatos del hogar para mejorar la calidad de vida, la eficiencia energética y la seguridad. La palabra ``domótica'' proviene de la unión de las palabras ``domus'' (hogar en latín) y ``robótica''.
+	\end{block}
+	
 \end{frame}
 
 
