Slide1: Add maria image

--- a/teoricas/teorica_01/src/mobile_robotics_introduction.tex
+++ b/teoricas/teorica_01/src/mobile_robotics_introduction.tex
@@ -7,6 +7,19 @@
 
 \begin{frame}
 	\frametitle{Robots de ficción}
+	
+	\begin{figure}
+		\centering
+		\subfloat[]
+		{
+			\includegraphics[width=0.3\columnwidth]{images/maria_movie_metropolis_1927.jpg}
+		}
+		\subfloat[]
+		{
+			\includegraphics[width=0.4\columnwidth]{images/maria_movie_metropolis_1927.jpg}
+		}
+	\end{figure}
+	
 	\TODO{Agregar slides de robots de ficción. como Hace peter corke: https://robotacademy.net.au/masterclass/introduction-to-robotics/?lesson=211}
 \end{frame}
 
