Add fiction robots

--- a/teoricas/teorica_01/src/mobile_robotics_introduction.tex
+++ b/teoricas/teorica_01/src/mobile_robotics_introduction.tex
@@ -1,26 +1,35 @@
 \begin{frame}
-	\frametitle{Robots de ficción}
-	\begin{figure}[!h]
-		\includegraphics[width=0.7\columnwidth]{wheres_wall_e_poster.jpg}
-     \end{figure}
+    \frametitle{Algunos Robots de ficción}
+    
+    \begin{figure}
+        \centering
+        \subfloat[Maria - Metropolis (1927)]
+        {
+            \includegraphics[width=0.2\columnwidth]{images/maria_movie_metropolis_1927.jpg}
+        }
+        \subfloat[Gort - The Day the Earth Stood Still (1951)]
+        {
+            \includegraphics[width=0.3\columnwidth]{images/gort_movie_the_day_the_earth_stood_stil_1951.jpg}
+        }
+        \subfloat[Robby - Forbidden Planet (1956)]
+        {
+            \includegraphics[width=0.15\columnwidth]{images/robby_movie_forbidden_planet_1956.jpg}
+        }
+        \subfloat[R2D2 y C3PO - Star Wars (1977)]
+        {
+            \includegraphics[width=0.3\columnwidth]{images/r2d2_and_c3po_star_wars_1977.jpg}
+        }
+    \end{figure}
+    
+    \note{información extraída de las slides de Peter Corke: https://robotacademy.net.au/masterclass/introduction-to-robotics/?lesson=211}
 \end{frame}
 
 \begin{frame}
 	\frametitle{Robots de ficción}
-	
-	\begin{figure}
-		\centering
-		\subfloat[]
-		{
-			\includegraphics[width=0.3\columnwidth]{images/maria_movie_metropolis_1927.jpg}
-		}
-		\subfloat[]
-		{
-			\includegraphics[width=0.4\columnwidth]{images/maria_movie_metropolis_1927.jpg}
-		}
-	\end{figure}
-	
-	\TODO{Agregar slides de robots de ficción. como Hace peter corke: https://robotacademy.net.au/masterclass/introduction-to-robotics/?lesson=211}
+	\begin{figure}[!h]
+		\includegraphics[width=0.7\columnwidth]{wheres_wall_e_poster.jpg}
+     \end{figure}
+    \note{Autor de la imagen Richard Sergeant}
 \end{frame}
 
 \begin{frame}
