Add research groups

--- a/teoricas/teorica_01/src/mobile_robotics_introduction.tex
+++ b/teoricas/teorica_01/src/mobile_robotics_introduction.tex
@@ -305,11 +305,13 @@
 \begin{frame}
     \frametitle{Tipos de Robots según locomoción o entorno}
 
-    Brazos robóticos
-    Robots con patas
-    Robots acuáticos
-    Robots Humanoides
-    Robots aéreos
+    \begin{itemize}
+        \item Brazos robóticos
+        \item Robots con patas
+        \item Robots acuáticos
+        \item Robots Humanoides
+        \item Robots aéreos
+    \end{itemize}
 
 \end{frame}
 
@@ -368,6 +370,131 @@
 
     Filosofemos...
     Revolución industrial.
+    
+    \begin{block}{Neoludismo}
+     Corriente filosófica que se opone al desarrollo tecnológico y científico de la sociedad moderna.
+    \end{block}
 
     \note{Filosofía de la robótica}
+    
+    \note{El ludismo fue un movimiento encabezado por artesanos ingleses en el siglo XIX, que protestaron entre los años 1811 y 1816 contra las nuevas máquinas que destruían el empleo. Los telares industriales y la máquina de hilar industrial introducidos durante la Revolución Industrial amenazaban con reemplazar a los artesanos con trabajadores menos cualificados y que cobraban salarios más bajos, dejándolos sin trabajo.}
+    
+    \note{Ned Ludd, un joven que supuestamente rompió dos telares en 1779. No se sabe si realmente existió (es un estilo Robin Hood).}
+    
 \end{frame}
+
+
+\begin{frame}
+    \frametitle{Red Argentina de Robótica}
+    
+    \tiny
+    
+    \begin{itemize}
+    \item Instituto Tecnológico de Buenos Aires
+    \item Grupo de Investigación en Vehículos y Sistemas Inteligentes, Fac. Ingeniería, Universidad Nacional del Comahue (Neuquén)
+    \item Instituto de Automática, Universidad Nacional de San Juan - CONICET
+    \item Grupo de Investigación en Robótica Autónoma - Universidad Abierta Interamericana
+    \item Laboratorio de Automática y Robótica (LAR) - Ingeniería UBA
+    \item Laboratorio de Robótica - CIFASIS (CONICET-UNR)
+    \item Centro de Investigación en Informática para la Ingeniería CIII perteneciente a la UTN, Facultad Regional Córdoba
+    \item División de Robotica y Automatización CAREM, Centro Atomico Bariloche e Instituto Balseiro
+    \item Grupo  de Investigación en Lenguajes e Inteligencia Artificial Facultad de Informática - UNComahue
+    \item Laboratorio del Procesamiento de la Información en Sistemas Autónomos (LAPISA). Universidad Nacional de Quilmes
+    \item INTELYMEC - Investigación Tecnológica en Electricidad y Mecatrónica; Universidad Nacional del Centro de la Provincia de Buenos Aires, sede Olavarría
+    \item LAC, Laboratorio de Automatización y Control. Departamento de Control; Escuela de Ingeniería Electrónica; Facultad de Ciencias Exactas, Ingeniería y Agrimensura; Universidad Nacional de Rosario.
+    \item Laboratorio de Robótica y Sistemas Embebidos (LRSE) perteneciente al Instituto de Ciencias de la Computación (ICC) UBA-CONICET
+    \item GIAR: Grupo de Inteligencia Artificial y Robótica. Universidad Tecnológica Nacional , Facultad Regional Buenos Aires
+    \item Instituto de Investigaciones en Ingeniería Eléctrica (IIIE – UNS/CONICET)
+    \item Laboratorio de Inteligencia Artificial y Robótica (LINAR). Universidad de San Andrés
+    \item Grupo de Robotica Aplicada Facultad de Ingeniería (RAFI), Universidad Nacional de La Pampa (UNLPam)
+    \item Grupo de Robótica - CIRINS - UNER
+    \item Grupo de Robótica. Universidad Tecnológica Nacional Facultad Reginal Delta
+    \item LARMMA - LAboratorio de Robots Móviles y Manipuladores Autónomos. UTN Facultad Regional Mendoza
+    \end{itemize}
+    
+\end{frame}
+
+\begin{frame}
+    \frametitle{Algunos Grupos o Instituciones de Robótica Internacionales}
+    
+   \begin{itemize}
+       \item University of Bonn - Lab for Photogrammetry and Robotics
+       \item Technical University of Munich (TUM)
+       \item University of Freiburg
+       \item ETH Zurich - Robotics and Perception Group
+       \item Universidad de Zaragoza, España
+       \item Queensland University of Technology (QUT)
+       \item Imperial College, Londres, Reino Unido
+       \item Massachusetts Institute of Technology (MIT) - SPARK Lab
+       \item Georgia Institute of Technology
+       \item Oxford Robotics Institute
+       \item Autonomous Space Robotics Lab
+       \item Stanford University - Standford Robotics Lab
+       \item Aerial Robotics Group, Hong Kong University of Science and Technology (HKUST)
+       \item ...
+   \end{itemize}
+   
+\end{frame}
+
+\begin{frame}
+    \frametitle{Referentes Internacionales}
+    
+    \begin{columns}[T] % align columns
+        \begin{column}{.3\textwidth}
+            \begin{itemize}
+                \item Norteamérica
+                \begin{itemize}
+                    \item John Leonard
+                    \item Sebastian Thrun
+                    \item Frank Dellaert
+                    \item Dieter Fox
+                    \item Stergios I. Roumeliotis
+                    \item Vijay Kumar
+                    \item Ryan Eustice
+                    \item Michael Kaess
+                    \item Guoquan (Paul) Huang
+                    \item Gabe Sibley
+                    \item Luca Carlone
+                    \item Andrea Censi
+                    \item Gabe Sibley
+                    \item Timothy Barfoot
+                \end{itemize}
+            \end{itemize}
+        \end{column}%
+        \hfill%
+        \begin{column}{.3\textwidth}
+            \begin{itemize} 
+                \item Europe
+                \begin{itemize}     
+                    \item Paul Newman
+                    \item Roland Siegwart
+                    \item Juan Nieto
+                    \item Wolfram Burgard
+                    \item Jose Neira
+                    \item Davide Scaramuzza
+                    \item Daniel Dremers
+                    \item Cyrill Stachnis
+                    \item José Luis Blanco Claraco
+                \end{itemize}
+                \item Australia
+                \begin{itemize}
+                    \item Cesar Cadena
+                    \item Ian Reid
+                    \item Tim Bailey
+                    \item Gamini Dissanayake
+                    \item Shoudong Huang
+                \end{itemize}
+            \end{itemize}
+        \end{column}%
+    \hfill%
+    \begin{column}{.3\textwidth}
+        \begin{itemize} 
+            \item Asia
+            \begin{itemize}     
+                \item Shaojie Shen
+            \end{itemize}
+        \end{itemize}
+    \end{column}%
+    \end{columns}    
+\end{frame}
+
