--- a/teoricas/teorica_01/src/mobile_robotics_introduction.tex
+++ b/teoricas/teorica_01/src/mobile_robotics_introduction.tex
@@ -298,8 +298,6 @@
         \end{column}%
     \end{columns}
 
-\TODO{agregar una imagen por cada tipo de robot asi se hacen uan mejor idea}
-
 \end{frame}
 
 \begin{frame}
@@ -307,9 +305,9 @@
 
     \begin{itemize}
         \item Brazos robóticos
+        \item Robots con ruedas
         \item Robots con patas
         \item Robots acuáticos
-        \item Robots Humanoides
         \item Robots aéreos
     \end{itemize}
 
@@ -415,7 +413,7 @@
 \end{frame}
 
 \begin{frame}
-    \frametitle{Algunos Grupos o Instituciones de Robótica Internacionales}
+    \frametitle{Grupos o Instituciones de Robótica Internacionales}
     
    \begin{itemize}
        \item University of Bonn - Lab for Photogrammetry and Robotics
