Add slide robotics in CIFASIS

--- a/common/latex_preamble.tex
+++ b/common/latex_preamble.tex
@@ -19,6 +19,7 @@
 \usepackage[backend=biber]{biblatex} % set biber to format references. Must configure Biber in Texstudio
 \usepackage{csquotes} % to remove warning triggered by biblatex and babel
 \usepackage{algpseudocode} % to write algorithm
+\usepackage{tikz} % to use tikz
 
 % Color commands for annotations
 \newcommand\TODO[1]{\textbf{\textcolor{red}{#1}}} %  TODO notes
