--- a/teoricas/teorica_01/src/mobile_robotics_introduction.tex
+++ b/teoricas/teorica_01/src/mobile_robotics_introduction.tex
@@ -383,6 +383,33 @@
 
 
 \begin{frame}
+    \frametitle{Robótica en el CIFASIS}
+      
+    \begin{itemize}
+        \item Ernesto Kofman (Investigador Principal)
+        \item Taihú Pire (Investigador Asistente)
+        \item Gastón Castro (Becario Postdoctoral)
+        \item Román Comelli (Becario Doctoral)
+        \item Javier Cremona (Becario Doctoral)
+        \item Nicolás Soncini (Becario Doctoral)
+
+        \item ...
+    \end{itemize}
+    
+    En el proyecto del Robot Desmalezador:
+    
+    \begin{itemize}
+        \item Eriva Vidal (CPA)
+        \item Maximiliano Garcia (CPA)    
+    \end{itemize}
+    
+    \begin{tikzpicture}[remember picture,overlay]
+        \node[xshift=-4.5cm,yshift=-2cm] at (current page.east) { \includegraphics[height=0.5\textheight]{./images/cifasis/team_2021.png}};
+    \end{tikzpicture}
+\end{frame}
+
+
+\begin{frame}
     \frametitle{Red Argentina de Robótica}
     
     \tiny
