Add robotics cifasis group image

--- a/teoricas/teorica_01/src/mobile_robotics_introduction.tex
+++ b/teoricas/teorica_01/src/mobile_robotics_introduction.tex
@@ -383,17 +383,14 @@
 
 
 \begin{frame}
-    \frametitle{Robótica en el CIFASIS}
+    \frametitle{Laboratorio de Robótica en el CIFASIS}
       
     \begin{itemize}
-        \item Ernesto Kofman (Investigador Principal)
+        %\item Ernesto Kofman (Investigador Principal)
         \item Taihú Pire (Investigador Asistente)
         \item Gastón Castro (Becario Postdoctoral)
-        \item Román Comelli (Becario Doctoral)
         \item Javier Cremona (Becario Doctoral)
         \item Nicolás Soncini (Becario Doctoral)
-
-        \item ...
     \end{itemize}
     
     En el proyecto del Robot Desmalezador:
