--- a/teoricas/teorica_02/src/locomotion.tex
+++ b/teoricas/teorica_02/src/locomotion.tex
@@ -24,12 +24,12 @@
 \begin{frame}
     \frametitle{Cinemática y Dinámica}
     \begin{block}{Cinemática}
-        La cinemática es la rama de la mecánica que describe el movimiento de los objetos sólidos sin considerar las causas que lo originan (las fuerzas) y se limita, principalmente, al estudio de la trayectoria en función del tiempo. Para ello utiliza velocidades y aceleraciones, que describen cómo cambia la posición en función del tiempo.
+        La cinemática es la rama de la mecánica que describe el movimiento de los objetos sólidos sin considerar las causas que lo originan (las fuerzas) y se limita, principalmente, al estudio de la trayectoria en función del tiempo. Para ello utiliza \textbf{velocidades} y \textbf{aceleraciones}, que describen cómo cambia la \textbf{posición en función del tiempo}.
     \end{block}
     \note{La velocidad se determina como el cociente entre el desplazamiento y el tiempo utilizado, mientras que la aceleración es el cociente entre el cambio de velocidad y el tiempo utilizado.}
 
     \begin{block}{Dinámica}
-        La dinámica es la parte de la física que estudia la relación existente entre las fuerzas que actúan sobre un cuerpo y los efectos que se producirán sobre el movimiento de ese cuerpo.
+        La dinámica es la parte de la física que estudia la relación existente entre las \textbf{fuerzas} que actúan sobre un cuerpo y los efectos que se producirán sobre el movimiento de ese cuerpo. La dinámica permite entender por qué los objetos cambian su estado de movimiento y cómo responden a las fuerzas aplicadas.
     \end{block}
 
     \note{Los antiguos pensadores griegos creían que la velocidad y la constancia del movimiento en la línea recta de un cuerpo (fenómeno descripto años más tarde como movimiento rectilíneo uniforme o MRU) estaban proporcionalmente relacionadas con una fuerza constante. Por extensión, se creía que la caída de un cuerpo pertenecía a esa categoría, por lo que se suponía que caería más rápido el cuerpo que más pesara.
