--- a/teoricas/teorica_02/src/locomotion.tex
+++ b/teoricas/teorica_02/src/locomotion.tex
@@ -87,8 +87,8 @@
     {\bf Desventaja: }
     \begin{itemize}
         \item Complegidad mecánica
-        \item mayor consumo (una pata con muchos joints puede tener que soportar todo el peso del robot)
-        \item para que tenga mucha maniobrabilidad cada pata debe tener muchas juntas.
+        \item Mayor consumo (una pata con muchos joints puede tener que soportar todo el peso del robot)
+        \item Para que tenga mucha maniobrabilidad cada pata debe tener muchas juntas.
 \end{itemize}
 
 \end{frame}
